# c-_template

./: .clang-format  .clang-tidy  .cz.toml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cd.yml  ci.yml  quality.yml
cmake/: doccheck.cmake  format.cmake  gitversion.cmake  options.cmake  summary.cmake  tidy.cmake
docs/: CMakeLists.txt
docs/doxygen/: Doxyfile.in
docs/latex/: main.tex  version.tex.in
include/XXX/: version.hpp.in
src/: CMakeLists.txt  main.cpp
src/math/: CMakeLists.txt
src/math/include/math/: add.hpp
src/math/src/: add.cpp
tests/: CMakeLists.txt
tests/math/: CMakeLists.txt  test_math.cpp
tools/: check_doc.py  install_dependencies.sh
